=======
HISTORY
=======

1.2.1 (unreleased)
------------------

- Nothing changed yet.


1.2.0 (2011-01-04)
------------------

- Always use an image's description as its caption, and make the image dialog
  edit the description field instead of the image's alt text. This provides
  parity with how captions were handled by kupu, and avoids misusing the alt
  text.
  [davisagli]

- When editing an image, correctly highlight it in the image dialog even if
  the link-by-uid setting changed since the image was added. This fixes
  http://dev.plone.org/plone/ticket/10970.
  [davisagli]

- Remove the resolveuid Python script; a browser view with the same name in
  plone.outputfilters is now used instead to resolve UUIDs.
  [davisagli]

- Deprecated various helpers in plone.outputfilters.setuphandlers since they
  now duplicate functions in plone.outputfilters.
  [davisagli]

- Use the resolveuid and captioning transforms from plone.outputfilters
  instead of implementing our own. See http://dev.plone.org/plone/ticket/9938
  for details.
  [davisagli]

1.1.6 (2011-01-04)
------------------

- Fix capitalization of the title of the content_css setting. This fixes
  http://dev.plone.org/plone/ticket/10792.
  [dariog, davisagli]

- Protect the control panel using the "Plone Site Setup: TinyMCE" permission,
  instead of the generic "Manage portal". Also, add the Site Administrator
  role to the default roles for this permission, for forward compatibility with
  Plone 4.1.
  [davisagli]

- Add tinymce-jsonconfiguration browser view and use it in the template
  tinymce_wysiwyg_support.pt. Make it easier to customize
  [toutpt]

1.1.5 (2010-11-14)
------------------

- Updated translations (de)
  [Plone translators]

- Make sure we fail gracefully on unfound UIDs when kupu isn't installed.
  [jbaldivieso]

- Removed profiles/uninstall/portal-tinymce.txt as it needlessly
  triggered a call to add_editor right before calling remove_editor.
  [maurits]

1.1.4 (2010-09-28)