@@ -5,8 +5,9 @@ HISTORY
 1.2.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
-
+- Add option 'auto' for directivity. The directivity will be set depending 
+  on the content or the portals default language. 
+  [csenger]
 
 1.2.0 (2011-01-04)
 ------------------
